--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
     height: 100vh; /*A altura será de 100 da viewport */
 }
 
-.container-image {
+.img-container {
     flex: 2;
     background-color: #E9FEF9;
     display: flex;
@@ -35,18 +35,24 @@ h1 {
     align-items: center;
 }
 
-.container-image img {
+.img-container img {
     width: 85%;
 }
 
-form { 
-    flex: 1; 
+.login-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    padding-bottom: 10%;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding-top: 10%;
-}   
+}
 
 .img-circle {
     width: 120px;
@@ -58,60 +64,66 @@ form {
     align-items: center;
 }
 
-form input {
-    width: 100%;
-    height: 6vh;
-}
-
 .input-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
-.input-icon {
-    padding-top: 20px;
-    margin-right: 5px;
+.input-text {
+    position: relative;
 }
 
-.first-input {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+label {
+    font-size: 25px;
+    position: absolute; 
+    top: 34px;
+    left: 15px;
 }
 
-.second-input {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+input {
+    width: 400px;
+    height: 45px;
+    margin-top: 30px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #d1d1d1;
+    font-size: 18px;
+    padding: 14px 30px 14px 50px; 
+    transition: 0.2s ease-in-out;
 }
 
-span { 
-    align-self: flex-end;
+input::placeholder {
+    color: #949494;
 }
 
-.icon {
-    width: 30px; 
-    height: 20px;
-    margin-right: 10px;
+input:hover {
+    border-bottom: 3px solid #14A883;
 }
 
-form label {
-    font-size: 16px;
-    font-weight: bold;
+input:focus {
+    border-bottom: 3px solid #14A883;
 }
 
-form input[type="submit"] {
+input:focus + label {
+    color: #14A883;
+}
+
+input[type="submit"] {
     font-family: 'Poppins';
     font-size: 24px;
     font-weight: bold;
-    width: 50%;
+    padding: 0; 
+    text-align: center;
+    width: 300px;
+    height: 50px;
     border-radius: 40px;
     background-color: #14A883;
     color: #fff;
+    text-align: center;
     transition: 0.5s;
 }
 
-form input[type="submit"]:hover {
-    width: 60%;
+input[type="submit"]:hover {
+    background-color: #0e745a;
 }
