--- a/dashboard-style.css
+++ b/dashboard-style.css
@@ -2,16 +2,25 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;0,900;1,400&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+:root {
+    --color-principal: #14A883;
+    --bg-color: #ECEEF4;
+    --bg-color2: #fff;
+    --menu-color: #EFFFFB;
+    --text-color: #8D90A3;
+}
+
+
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     outline: 0;
     border: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #ECEEF4;
+    background-color: var(--bg-color);
     font-family: 'Poppins';
 }
 
@@ -21,7 +30,8 @@ h1 {
 
 h5 {
     font-size: 14px;
-    color: #8D90A3;
+    font-weight: normal;
+    color: #000000;
 }
 
 span {
@@ -29,38 +39,56 @@ span {
 }
 
 button {
-    background-color: transparent   ;
+    background-color: transparent;
 }
+
+a {
+    text-decoration: none;
+    color: #8D90A3;
+}
+
+/*--------------------------*/
+/*  Container da Navegação  */
+/*--------------------------*/
 
 nav .nav-container {
     display: flex;
     align-items: center;
-    width: 100%;
     justify-content: space-between;
+    width: 100%;
     position: relative;
 }
+
+/*------------------------*/
+/*  Configuração da Logo  */
+/*------------------------*/
 
 nav .logo-area {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: #EFFFFB;
-    padding: 25px;
+    background-color: var(--menu-color);
+    padding: 1.5rem;
     width: 300px;
     gap: 15px;
 }
 
-nav .logo-area .logo {
+nav .logo {
     width: 80px;
 }
 
+/*-----------------------*/
+/*   Barra de Pesquisa  */
+/*----------------------*/
+
 nav .search-bar {
     display: flex;
+    flex-direction: row-reverse; /*O span aparece no fim do input, o flex direction row-reverse inverte a ordem */
     align-items: center;
     width: 300px;
     height: 40px;
     border-radius: 12px;
-    background-color: #FFF;
+    background-color: var(--bg-color2);
     position: absolute;
     left: 18%;
     padding: 10px;
@@ -71,6 +99,8 @@ nav .search-bar input[type="search"] {
     background: transparent;
     width: 100%;
     height: 40px;
+    font-size: 14px;
+    font-family: 'Poppins';
 }
 
 nav .search-bar input[type="search"]::placeholder {
@@ -78,24 +108,44 @@ nav .search-bar input[type="search"]::placeholder {
     font-size: 14px;
 }
 
+nav .search-bar input[type="search"]:focus + span {
+    color: var(--color-principal);
+}
+
+/*-----------------------*/
+/*   Área do Usuário    */
+/*----------------------*/
+
 nav .profile-area {
     display: flex; 
     justify-content: center;
     align-items: center;
-    gap: 30px;
     position: absolute;
     right: 3%;
 }
+
+/*-------------------------------------*/
+/*   Área do Usuário - Notificações    */
+/*-------------------------------------*/
 
 nav .profile-area .notification-btn {
     background-color: white;
     width: 48px;
     height: 48px;
     border-radius: 11px;
+    margin-right: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+nav .profile-area .notification-btn span:hover {
+    color: var(--color-principal);
+}
+
+/*-------------------------------------*/
+/*   Área do Usuário - Configurações   */
+/*-------------------------------------*/
 
 nav .profile-area .profile {
     display: flex;
@@ -105,7 +155,9 @@ nav .profile-area .profile {
 
 .profile-photo { 
     margin-right: 10px;
-    align-self: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-photo img {
@@ -113,34 +165,70 @@ nav .profile-area .profile {
     border-radius: 50%;
 }
 
-a {
-    text-decoration: none;
-    color: #8D90A3;
+.profile span {
+    font-size: 26px;
+    color: #000000;
 }
+
+.profile span:hover {
+    color: #14A883;
+}
+
+/*---------------------------*/
+/*   Configuração do Menu   */
+/*--------------------------*/
 
 aside {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
-    background-color: #EFFFFB;
+    background-color: var(--menu-color);
     width: 300px;
-    height: 91vh;
+    height: calc(100vh - 11.5vh);
+}
+
+aside .sidebar {
+    width: 100%;
+    padding-left: 30px;
 }
 
 aside .sidebar a {
     display: flex;
     align-items: center;
     gap: 1.2rem;
-    height: 4.2rem;
+    height: 4.5rem;
     top: 10%;
     position: relative;
 }
 
 aside .sidebar a:last-child {
-    top: 90%;
+    top: 85%;
 }
 
 aside .sidebar a span {
     font-size: 1.7rem;
+}
+
+/*---------------------------*/
+/*     Animações do Menu     */
+/*--------------------------*/
+
+aside .sidebar a:hover  {
+    background-color: #cdfdf1
+}
+
+aside .sidebar a:hover::before {
+    content: '';
+    width: 5px;
+    height: 70px;
+    background-color: #14A883;
+}
+
+aside .sidebar a:active{
+    color: #14A883;
+}
+
+aside .sidebar a:active span {
+    color: #14A883;
 }
