--- a/dashboard-style.css
+++ b/dashboard-style.css
@@ -365,21 +365,17 @@ main section#middle .external-card .card-content {
 table {
     margin-top: 10px; 
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: collapse; /*remove o espaço entre as bordas da tabela*/
     border-spacing: 0;
 }
 
 table thead {
-    background-color: #bcffef;
-    height: 30px;
-}
-
-table > thead > tr > th {
-    border: none;
+    background: linear-gradient(to right, rgba(29,233,182, 10%), rgba(29,233,182, 10%));
+    height: 33px;
 }
 
 thead th:first-child {
-    border-radius: 100px 0 0px 200px;
+    border-radius: 100px 0 0 200px;
 }
 
 thead th:last-child {
@@ -396,16 +392,12 @@ table thead th {
 
 table tbody {
     background-color: #fff;
-    border-top: 1em solid var(--bg-color);
+    border-top: 12px solid var(--bg-color);
 }
 
 table tbody td {
     height: 47px;
     text-align: center;
-}
-
-table > tbody > tr > td {
-    border: none;
 }
 
 table tbody td:first-child {
@@ -417,11 +409,11 @@ table tbody td:last-child {
 }
 
 table tbody:last-child td:first-child {
-    border-radius: 16px 0 0 5px;
+    border-radius: 16px 0 0 8px;
 }
 
 table tbody:last-child td:last-child {
-    border-radius: 0 16px 5px 0;
+    border-radius: 0 16px 8px 0;
 }
 
 table h5 {
@@ -458,10 +450,113 @@ section#right {
     border-radius: 12px; 
 }
 
+/*=========== AULAS SÍNCRONAS ===========*/
+
 .aulas {
+    position: relative;
     width: 290px;
-    height: 500px;
+    height: 514px;
     background-color: #fff;
     border-radius: 12px;
+    padding: 15px;
 }
 
+.aulas h3 {
+    margin-bottom: 5px;
+}
+
+.aulas h5 {
+    font-style: italic;
+}
+
+.day-option {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 4px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    position: absolute;
+    top: 5%;
+    right: 6%;
+}
+
+.day-class {
+    margin-top: 20px;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+.day-class .class-option {
+    background-color: #F0F0F0;
+    padding: 10px;
+    margin: 2px 0 5px 20px;
+    border-left: 5px solid #14A883;
+}
+
+.day-class .class-option .class-information {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: 5px 0; 
+}
+
+.day-class .class-option > h5 {
+    font-size: 14px;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    color: #14A883;
+    font-weight: bold;
+}
+
+.day-class .class-option .class-information > h6 {
+    font-family: 'Noto Sans';
+    font-size: 12px;
+    font-weight: normal;
+}
+
+/*=========== AULAS SELECIONADA ===========*/
+
+.class-active {
+    display: flex; /*ADICIONAR JAVASCRIPT*/
+    flex-direction: column;
+    background-color: #F0F0F0;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.class-active h5 {
+    font-style: normal;
+    font-weight: bold;
+    color: #14A883;
+}
+
+.class-active-icons {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 0; 
+}
+
+.class-active-information {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.class-active-information h6 {
+    font-weight: normal;
+    font-size: 12px;
+}
+
+.class-active a {
+    display: block;
+    margin-top: 10px;
+    text-align: center;
+    font-weight: bold;
+    background-color: #14A883;
+    padding: 10px;
+    border-radius: 8px;
+    color: #fff;
+}
