--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -7,7 +7,9 @@
     <title></title>
     <script src="https://kit.fontawesome.com/749211d7c1.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="dashboard-style.css">
+    <link rel="stylesheet" href="../styles/nav-style.css">
+    <link rel="stylesheet" href="../styles/menu-style.css">
+    <link rel="stylesheet" href="../styles/dashboard-style.css">
 </head>
 <body>
 
@@ -15,7 +17,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo-area">
-                <img src="img/logo.png" class="logo">
+                <img src="../img/logo.png" class="logo">
                 <h1>iEducar</h1>
             </div>
 
@@ -32,7 +34,7 @@
 
                 <div class="profile">
                     <div class="profile-photo">
-                        <img src="img/profile-photo.png">
+                        <img src="../img/profile-photo.png">
                     </div>
                     <h5>Usuário</h5>
                     <span class="material-icons-sharp">expand_more</span>
@@ -68,7 +70,7 @@
                     <h3>Externos</h3>
                 </a>
         
-                <a href="login.html">
+                <a href="../index.html">
                     <span class="material-icons-sharp">logout</span>
                     <h3>Sair</h3>
                 </a>
@@ -133,7 +135,7 @@
                     </div>
 
                     <div class="card-title">
-                        <img src="img/rdc.jpg" alt="">
+                        <img src="../img/rdc-dashboard.jpg" alt="">
                         <div class="course-title">
                             <h4>Redes de Computadores</h4>
                             <div class="professor">
@@ -174,7 +176,7 @@
                     </div>
 
                     <div class="card-title">
-                        <img src="img/cpi.jpg" alt="">
+                        <img src="../img/cpi-dashboard.jpg" alt="">
                         <div class="course-title">
                             <h4>Construção de Páginas</h4>
                             <div class="professor">
@@ -215,7 +217,7 @@
                     </div>
 
                     <div class="card-title">
-                        <img src="img/rdc.jpg" alt="">
+                        <img src="../img/rdc-dashboard.jpg" alt="">
                         <div class="course-title">
                             <h4>Redes de Computadores</h4>
                             <div class="professor">
@@ -411,6 +413,6 @@
             </div>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="../scripts/dashboard.js"></script>
 </body>
 </html>
