Página de Atividades

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -61,7 +61,7 @@
                     <span class="material-icons-sharp">book</span>
                     <h3>Cursos</h3>
                 </a>
-                <a href="#">
+                <a href="atividades.html">
                     <span class="material-icons-sharp">attach_file</span>
                     <h3>Atividades</h3>
                 </a>
