--- a/views/atividades.html
+++ b/views/atividades.html
@@ -52,7 +52,7 @@
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="calendário.html">
                     <span class="material-icons-sharp">calendar_month</span>
                     <h3>Calendário</h3>
                 </a>
@@ -64,7 +64,7 @@
                     <span class="material-icons-sharp">attach_file</span>
                     <h3>Atividades</h3>
                 </a>
-                <a href="#">
+                <a href="externos.html">
                     <span class="material-icons-sharp">cast_for_education</span>
                     <h3>Externos</h3>
                 </a>
@@ -78,7 +78,26 @@
 
         <section id="middle">
             <div class="task-table-container">
-                <h1>Atividades</h1>
+                <div class="task-table-header">
+                    <div class="create-task-button">
+                        <span class="material-icons-sharp">task</span>
+                        <h4>Criar Atividade</h4>
+                    </div>
+                    <div class="task-options-area">
+                        <div class="task-filter">
+                            <span class="material-icons-sharp">tune</span>
+                            <h4>Filtro</h4>
+                        </div>
+                        <div class="task-results-area">
+                            <h4>Resultados por página:</h4>
+                            <div class="task-results">
+                                <h5>10</h5>
+                                <span class="material-icons-sharp">expand_more</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <table>
                     <thead>
                         <tr class="task-title">
@@ -191,7 +210,7 @@
                             </td>
                             <td class="task-delivery">
                                 <span class="material-icons-sharp no-complete">cancel</span>
-                                <h5>Não Entregue</h5>
+                                <h5>Pendente</h5>
                             </td>
                             <td>
                                 <h5>S/N</h5>
@@ -219,7 +238,7 @@
                             </td>
                             <td class="task-delivery">
                                 <span class="material-icons-sharp no-complete">cancel</span>
-                                <h5>Não Entregue</h5>
+                                <h5>Pendente</h5>
                             </td>
                             <td>
                                 <h5>S/N</h5>
@@ -300,7 +319,7 @@
                             </td>
                             <td class="task-delivery">
                                 <span class="material-icons-sharp no-complete">cancel</span>
-                                <h5>Não Entregue</h5>
+                                <h5>Pendente</h5>
                             </td>
                             <td>
                                 <h5>S/N</h5>
@@ -327,7 +346,7 @@
                             </td>
                             <td class="task-delivery">
                                 <span class="material-icons-sharp no-complete">cancel</span>
-                                <h5>Não Entregue</h5>
+                                <h5>Pendente</h5>
                             </td>
                             <td>
                                 <h5>S/N</h5>
