--- a/views/cursos.html
+++ b/views/cursos.html
@@ -48,15 +48,15 @@
         <!--MENU-->
         <aside>
             <div class="sidebar">
-                <a href="dashboard.html">
+                <a href="dashboard.html" class="active">
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="calendário.html">
                     <span class="material-icons-sharp">calendar_month</span>
                     <h3>Calendário</h3>
                 </a>
-                <a href="cursos.html">
+                <a href="#">
                     <span class="material-icons-sharp">book</span>
                     <h3>Cursos</h3>
                 </a>
@@ -64,7 +64,7 @@
                     <span class="material-icons-sharp">attach_file</span>
                     <h3>Atividades</h3>
                 </a>
-                <a href="#">
+                <a href="externos.html">
                     <span class="material-icons-sharp">cast_for_education</span>
                     <h3>Externos</h3>
                 </a>
