--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -53,7 +53,7 @@
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="calendário.html">
                     <span class="material-icons-sharp">calendar_month</span>
                     <h3>Calendário</h3>
                 </a>
@@ -65,7 +65,7 @@
                     <span class="material-icons-sharp">attach_file</span>
                     <h3>Atividades</h3>
                 </a>
-                <a href="#">
+                <a href="externos.html">
                     <span class="material-icons-sharp">cast_for_education</span>
                     <h3>Externos</h3>
                 </a>
@@ -271,80 +271,80 @@
                     <tbody>
                         <tr>
                             <td>
-                                <h5>Exame dos Módulos 8-10</h5>
-                            </td>
-                            <td>
-                                <h5>Redes de Computadores</h5>
-                            </td>
-                            <td>
-                                <h5>Atividade</h5>
-                            </td>
-                            <td>
-                                <h5>27/12/21</h5>
-                            </td>
-                            <td>    
-                                <h5>03/01/22</h5>
-                            </td>
-                            <td class="task-delivery">
-                                <span class="material-icons-sharp">check_circle</span>
-                                <h5>Entregue</h5>
-                            </td>
-                            <td>
-                                <h5>97%</h5>
-                            </td>
-                        </tr>
-                    </tbody>
-
-                    <tbody>
-                        <tr>
-                            <td class="exam">
-                                <h5>Atividade Prática 05</h5>
-                            </td>
-                            <td>
-                                <h5>Lógica de Programação</h5>
-                            </td>
-                            <td>
-                                <h5>Atividade</h5>
-                            </td>
-                            <td>
-                                <h5>20/12/21</h5>
-                            </td>
-                            <td>
-                                <h5>03/01/22</h5>
-                            </td>
-                            <td class="task-delivery">
-                                <span class="material-icons-sharp">cancel</span>
-                                <h5>Não Entregue</h5>
-                            </td>
-                            <td>
-                                <h5>S/N</h5>
-                            </td>
-                        </tr>
-                    </tbody>
-
-                    <tbody>
-                        <tr>
-                            <td class="exam">
-                                <h5>Atividade 16</h5>
+                                <h5>Projeto Final de CPI</h5>
                             </td>
                             <td>
                                 <h5>Construção de Páginas</h5>
                             </td>
                             <td>
-                                <h5>Atividade</h5>
+                                <h5>Prova</h5>
                             </td>
                             <td>
-                                <h5>23/12/21</h5>
+                                <h5>27/01/22</h5>
                             </td>
-                            <td>
-                                <h5>05/01/22</h5>
+                            <td>    
+                                <h5>06/02/22</h5>
                             </td>
                             <td class="task-delivery">
-                                <span class="material-icons-sharp">check_circle</span>
-                                <h5>Não Entregue</h5>
+                                <span class="material-icons-sharp complete">check_circle</span>
+                                <h5>Entregue</h5>
                             </td>
                             <td>
-                                <h5>S/N</h5>
+                                <h5>4.0</h5>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                    <tbody>
+                        <tr>
+                            <td>
+                                <h5>Prova de Computação</h5>
+                            </td>
+                            <td>
+                                <h5>Introdução a Computação</h5>
+                            </td>
+                            <td>
+                                <h5>Prova</h5>
+                            </td>
+                            <td>
+                                <h5>02/02/22</h5>
+                            </td>
+                            <td>
+                                <h5>02/02/22</h5>
+                            </td>
+                            <td class="task-delivery">
+                                <span class="material-icons-sharp complete">check_circle</span>
+                                <h5>Entregue</h5>
+                            </td>
+                            <td>
+                                <h5>100</h5>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                    <tbody>
+                        <tr>
+                            <td>
+                                <h5>Exame Final de Redes</h5>
+                            </td>
+                            <td>
+                                <h5>Redes de Computadores</h5>
+                            </td>
+                            <td>
+                                <h5>Prova</h5>
+                            </td>
+                            <td>
+                                <h5>31/01/22</h5>
+                            </td>
+                            <td>
+                                <h5>31/01/22</h5>
+                            </td>
+                            <td class="task-delivery">
+                                <span class="material-icons-sharp complete">check_circle</span>
+                                <h5>Entregue</h5>
+                            </td>
+                            <td>
+                                <h5>40%</h5>
                             </td>
                         </tr>
                     </tbody>
