--- a/styles/atividades-style.css
+++ b/styles/atividades-style.css
@@ -1,27 +1,93 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap');
+
 main {
     display: grid;
     grid-template-columns: 300px auto;
     gap: 50px;
-    margin-right: 50px;
 }
 
-/*=========== TASK TABLE ===========*/
+/*================== TASK OPTIONS ==================*/
 
-.task-table-container h1 {
-    margin: 20px 0; 
+section#middle .task-table-container {
+    padding: 25px 0;
 }
+
+section#middle .task-table-header {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 15px;
+}
+
+section#middle .task-table-header .create-task-button {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    background-color: #14A883;
+    text-transform: uppercase;
+    border-radius: 8px;
+    padding: 10px 20px;
+}
+
+section#middle .create-task-button span, .create-task-button h4 {
+    color: #fff;
+}
+
+section#middle .create-task-button h4 {
+    text-transform: uppercase;
+    font-family: 'Poppins';
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+
+section#middle .task-options-area {
+    display: flex;
+    align-items: center;
+    gap: 35px;
+}
+
+section#middle .task-options-area span, h4, h5{
+    color: #525359;
+}
+
+section#middle .task-options-area h5 {
+    font-size: 16px;
+}
+
+section#middle .task-filter {
+    display: flex;
+    gap: 5px;
+}
+
+section#middle .task-results-area {
+    display: flex; 
+    align-items: center;
+    gap: 10px;
+}
+
+section#middle .task-results {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 8px;
+    border-radius: 8px;
+    background-color: #fff;
+}
+
+/*================== TASK TABLE ==================*/
 
 table {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse; /*remove o espaço entre as bordas da tabela*/
     border-spacing: 0;
 }
 
 table thead {
     background: linear-gradient(to right, rgba(29,233,182, 10%), rgba(29,233,182, 10%));
-    height: 33px;
+    height: 40px;
     text-transform: uppercase;
 }
 
@@ -36,7 +102,7 @@ thead th:last-child {
 table thead th {
     font-family: 'Noto Sans';
     letter-spacing: 6%;
-    font-size: 14px;
+    font-size: 15px;
     color: #14A883;
     font-weight: bold;
 }
