Script do Menu e Animações

--- a/styles/menu-style.css
+++ b/styles/menu-style.css
@@ -61,6 +61,7 @@ main aside .sidebar a {
     height: 4.5rem;
     top: 10%;
     position: relative;
+    transition: 300ms ease-in-out;
 }
 
 main aside .sidebar a:last-child {
@@ -70,33 +71,19 @@ main aside .sidebar a:last-child {
 main aside .sidebar a span {
     font-size: 1.7rem;
     margin-left: 3rem;
+    transition: 300ms ease-in-out;
 }
 
 /*---------------------------*/
 /*     Animações do Menu     */
 /*--------------------------*/
 
-main aside .sidebar a.active{
-    background: linear-gradient(to right, rgba(29,233,182, 10%), rgba(29,233,182, 10%));
-    color: #14A883;
-}
-
-main aside .sidebar a.active span {
-    color: #14A883;
-}
-
-main aside .sidebar a.active::after {
-    content: '';
-    width: 6px;
-    height: 100%;
-    background-color: #14A883;
-    border-radius: 8px 0 0 8px;
-    position: absolute; /*Absoluto em relação ao link*/
-    right: 0;
-}
-
 main aside .sidebar a:hover  {
     background: linear-gradient(to right, rgba(29,233,182, 10%), rgba(29,233,182, 10%));
+}
+
+main aside .sidebar a:hover span {
+    margin-left: 3.5rem;
 }
 
 main aside .sidebar a:hover::after {
@@ -116,3 +103,28 @@ main aside .sidebar a:active{
 main aside .sidebar a:active span {
     color: #14A883;
 }
+
+/*---------------------------------------------*/
+/*     Animações do Menu - Menu Selecionado    */
+/*----------------------------------------------*/
+
+main aside .sidebar a.active {
+    background: linear-gradient(to right, rgba(29,233,182, 10%), rgba(29,233,182, 10%));
+    color: #14A883;
+}
+
+main aside .sidebar a.active span {
+    color: #14A883;
+}
+
+main aside .sidebar a.active::after {
+    content: '';
+    width: 6px;
+    height: 100%;
+    background-color: #14A883;
+    border-radius: 8px 0 0 8px;
+    position: absolute;
+    right: 0;
+}
+
+
