--- a/views/cursos.html
+++ b/views/cursos.html
@@ -48,7 +48,7 @@
         <!--MENU-->
         <aside>
             <div class="sidebar">
-                <a href="dashboard.html" class="active">
+                <a href="dashboard.html">
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
@@ -56,7 +56,7 @@
                     <span class="material-icons-sharp">calendar_month</span>
                     <h3>Calendário</h3>
                 </a>
-                <a href="#">
+                <a href="cursos.html">
                     <span class="material-icons-sharp">book</span>
                     <h3>Cursos</h3>
                 </a>
@@ -68,7 +68,6 @@
                     <span class="material-icons-sharp">cast_for_education</span>
                     <h3>Externos</h3>
                 </a>
-        
                 <a href="../index.html">
                     <span class="material-icons-sharp">logout</span>
                     <h3>Sair</h3>
@@ -144,5 +143,6 @@
             </div>
         </section>
     </main>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html>
